--- a/image_classification_tf_donkey_zebra_horse.ipynb
+++ b/image_classification_tf_donkey_zebra_horse.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "# Image Classification Models using Tensorflow, Donkey vs Zebra vs Horse\n",
-        "This jupyter notebook demonstrates how to build a model to classify three categories (“donkey”, “zebra”, or “horse”) by leveraging Image Augmentation and a pre-trained TF2 SavedModel from TensorFlow Hub."
+        "This jupyter notebook demonstrates how to build a model to classify three categories (“donkey”, “zebra”, or “horse”) by utilizing Image Augmentation and a pre-trained TF2 SavedModel from TensorFlow Hub."
       ]
     },
     {
