Update description at ### Select the TF2 SavedModel module to use

--- a/image_classification_tf_donkey_zebra_horse.ipynb
+++ b/image_classification_tf_donkey_zebra_horse.ipynb
@@ -387,10 +387,10 @@
         "id": "hbKE3qgHCmF1"
       },
       "source": [
-        "\n",
-        "\n",
         "### Select the TF2 SavedModel module to use\n",
-        "https://www.tensorflow.org/hub/tutorials/tf2_image_retraining?hl=id#select_the_tf2_savedmodel_module_to_use"
+        "\n",
+        "\n",
+        "Source: https://www.tensorflow.org/hub/tutorials/tf2_image_retraining?hl=id#select_the_tf2_savedmodel_module_to_use"
       ]
     },
     {
